--- a/React/UdemyCourse/myapp/package.json
+++ b/React/UdemyCourse/myapp/package.json
@@ -31,6 +31,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "prop-types": "^15.8.1",
     "radium": "^0.26.2",
     "raf": "3.4.0",
     "react": "^18.2.0",
