--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Leetcode/leetcode.exe
 /8.01 Classical Mechanics/*
 /8.02 Physics II Electricity and Magnetism/*
 /How to Code Simple Data/*
+How to Code Simple Data/*
