--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,4 @@ Leetcode/leetcode.exe
 /6.042 Mathematics For Computer Science/*
 /8.01 Classical Mechanics/*
 /8.02 Physics II Electricity and Magnetism/*
-/How to Code Simple Data/*
-How to Code Simple Data/*
+How to Code Simple Data/
