--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ Leetcode/leetcode.exe
 /OpenGL/glad
 /OpenGL/*
 !OpenGL/Sudoku
-How to Code Simple Data/
+/How to Code Simple Data/
 6.01 Intro To Electrical Engineering and Computer Science/
 6.006 Intro To Algorithms/
 6.042 Mathematics For Computer Science/
