starting How to Code: Simple Data

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ How to Code Simple Data/
 6.042 Mathematics For Computer Science/
 8.01 Classical Mechanics/
 8.02 Physics II Electricity and Magnetism/
+How to Code - Simple Data/racket-8.7-x86_64-win32-cs.exe
